feat(main): create interfaces
