# internal/api/handlers/settingshandlers/handlers.go
@@ -4,27 +4,19 @@ import (
 	"context"
 	"errors"
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 	"net/http"
 	"time"
+	"todoapp/internal/api/helpers"
 	"todoapp/internal/api/models"
-) 
+)
 
 // получение настроек пользователя
 func (s *SettingsHandler) GetSettings(c *gin.Context) {
 	// получаем id из контекста
-	userIDValue, exist := c.Get("UserId")
-	if !exist {
-		s.logger.Error("Error in GetSettings: user ID not found in context")
-		c.JSON(http.StatusForbidden, gin.H{"error": "User ID not found"})
-		return
-	}
-
-	// приводим значение к uuid
-	userId, ok := userIDValue.(uuid.UUID)
-	if !ok {
-		s.logger.Error("Error in GetSettings: Invalid user ID type")
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID type"})
+	userId, err := helpers.GetUserIdFromContext(c)
+	if err != nil {
+		s.logger.Error("Error in GetSettings:", "error", err)
+		c.JSON(http.StatusForbidden, gin.H{"error": err.Error()})
 		return
 	}
 
@@ -53,18 +45,10 @@ func (s *SettingsHandler) GetSettings(c *gin.Context) {
 // изменение настроек пользователя
 func (s *SettingsHandler) UpdateSettings(c *gin.Context) {
 	// получаем id из контекста
-	userIDValue, exist := c.Get("UserId")
-	if !exist {
-		s.logger.Error("Error in UpdateSettings: user ID not found in context")
-		c.JSON(http.StatusForbidden, gin.H{"error": "User ID not found"})
-		return
-	}
-
-	// приводим значение к uuid
-	userId, ok := userIDValue.(uuid.UUID)
-	if !ok {
-		s.logger.Error("Error in UpdateSettings: invalid user ID type")
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID type"})
+	userId, err := helpers.GetUserIdFromContext(c)
+	if err != nil {
+		s.logger.Error("Error in UpdateSettings:", "error", err)
+		c.JSON(http.StatusForbidden, gin.H{"error": err.Error()})
 		return
 	}
 
@@ -82,7 +66,7 @@ func (s *SettingsHandler) UpdateSettings(c *gin.Context) {
 	defer cancel()
 
 	// изменяем настройки
-	err := s.settingsService.UpdateSettings(ctx, userId, updatedSettings.TimeDuration, updatedSettings.UserTz)
+	err = s.settingsService.UpdateSettings(ctx, userId, updatedSettings.TimeDuration, updatedSettings.UserTz)
 	if err != nil {
 		if errors.Is(err, context.DeadlineExceeded) {
 			s.logger.Error("Error in UpdateSettings:", "error", err)
